# Carcode

./: README.md
LIO-SLAM-main/: README.md  base_lio.sh
LIO-SLAM-main/src/LIO/FAST_LIO/Log/: mat_pre.txt
LIO-SLAM-main/src/LIO/FAST_LIO/config/: ouster64.yaml
LIO-SLAM-main/src/LIO/FAST_LIO/launch/: mapping_ouster64.launch
LIO-SLAM-main/src/LIO/FAST_LIO/rviz_cfg/: loam_livox.rviz
LIO-SLAM-main/src/LIO/FAST_LIO/src/: laserMapping.cpp
LIO-SLAM-main/src/LIO/ouster-ros/config/: viz.rviz
LIO-SLAM-main/src/LIO/ouster-ros/launch/: record.launch  replay.launch  sensor.launch
almost_finished_code_2024_7_1/sh_files/: base_lio.sh  init.sh  init2.sh  plan.sh  readmd.txt
almost_finished_code_2024_7_1/src/: README.md
almost_finished_code_2024_7_1/src/pnc/car_msgs/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/car_msgs/msg/: CarState.msg  CarTraj.msg  CarTrajS.msg  Error.msg
almost_finished_code_2024_7_1/src/pnc/car_simulator/config/: car_simulator.yaml
almost_finished_code_2024_7_1/src/pnc/car_simulator/launch/: car_simulator.launch
almost_finished_code_2024_7_1/src/pnc/car_simulator/src/: car_simulator_nodelet.cpp
almost_finished_code_2024_7_1/src/pnc/local_sensing/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/local_sensing/launch/: single_drone.xml
almost_finished_code_2024_7_1/src/pnc/local_sensing/src/: pointcloud_render_node.cpp
almost_finished_code_2024_7_1/src/pnc/map_generator/src/: map_generator_easy.py
almost_finished_code_2024_7_1/src/pnc/mapping/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/mapping/include/mapping/: map_manager.h  mapping.h
almost_finished_code_2024_7_1/src/pnc/mapping/src/: map_manager.cpp  mapping.cc  mapping_vis_node.cpp  raycast.cpp
almost_finished_code_2024_7_1/src/pnc/mpc_car/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/mpc_car/config/: mpc_car_.yaml  mpc_car_real.yaml  mpc_car_sim.yaml
almost_finished_code_2024_7_1/src/pnc/mpc_car/include/mpc_car/: mpc_car.hpp
almost_finished_code_2024_7_1/src/pnc/mpc_car/include/plan_utils/: poly_traj_utils.hpp  vehicle_param.hpp
almost_finished_code_2024_7_1/src/pnc/mpc_car/launch/: simulation.launch
almost_finished_code_2024_7_1/src/pnc/mpc_car/src/: mpc_car.cpp
almost_finished_code_2024_7_1/src/pnc/planning/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/planning/config/: planner_params.yaml  planner_params_lidar.yaml  planner_params_pcd.yaml  planner_params_real.yaml  rviz_config.rviz  rviz_config_pcd.rviz  rviz_config_real.rviz
almost_finished_code_2024_7_1/src/pnc/planning/include/ompl/: CTestTestfile.cmake  Makefile  cmake_install.cmake  config.h
almost_finished_code_2024_7_1/src/pnc/planning/include/path_search/: kino_astar.h
almost_finished_code_2024_7_1/src/pnc/planning/include/plan_utils/: geoutils2d.hpp  poly_traj_utils.hpp  traj_container.hpp
almost_finished_code_2024_7_1/src/pnc/planning/include/planning/: plan_manager.h
almost_finished_code_2024_7_1/src/pnc/planning/include/traj_opt/: traj_optimizer.h
almost_finished_code_2024_7_1/src/pnc/planning/include/wrapper/: config.h
almost_finished_code_2024_7_1/src/pnc/planning/launch/: real_plan.launch  sim_plan.launch  sim_plan_lidar.launch  sim_plan_pcd.launch  vis_bag.launch
almost_finished_code_2024_7_1/src/pnc/planning/src/: kino_astar.cpp  plan_manager.cpp  plan_test_node.cpp  traj_optimizer.cpp
almost_finished_code_2024_7_1/src/pnc/utils/odom_visualization/: CMakeLists.txt  README.md
almost_finished_code_2024_7_1/src/pnc/utils/odom_visualization/src/: odom_visualization.cpp
almost_finished_code_2024_7_1/src/pnc/utils/vehicle_params/: CMakeLists.txt  package.xml
almost_finished_code_2024_7_1/src/pnc/utils/vehicle_params/include/vehicle_params/: vehicle_param.h
almost_finished_code_2024_7_1/src/pnc/utils/vehicle_params/src/: vehicle_param.cpp
