<?xml version="1.0"?>
<package format="2">
  <name>mpc_car</name>
  <version>0.0.0</version>
  <description>The mpc_car package</description>

  <maintainer email="real_zhiwei@zju.edu.cn">ji</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>car_msgs</depend>

</package>
