<?xml version="1.0"?>
<package format="2">
  <name>vehicle_params</name>
  <version>0.0.0</version>
  <description>The vehicle_params package</description>

  <maintainer email="fake_zhiwei@zju.edu.cn">zhiwei</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
